fec-757 fix scroller jump when clicking a button in the buttom part of the list

--- a/app/less/list.less
+++ b/app/less/list.less
@@ -31,6 +31,7 @@
   }
   #listTable {
     width:100%;
+    z-index: 100;
   }
   #listsearch {
     .input-group-addon {
